# graph-scheduled-hidden-profile

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: qwen3_8b_full.json  qwen3_8b_pilots.json
docs/: adaptive_orchestrator.md  algorithms.md  experiment_overview.md  theory_token_spread.md
examples/: batch_qwen3_full.json  batch_stub.json  batch_stub_tiny.json
gshp/: __init__.py  aho_corasick.py  analyze_batch.py  analyze_run.py  artifacts.py  audit.py  batch.py  batch_errors.py  bridge_coder.py  cli.py  deliberation.py  dv3.py  experiment.py  fact_tracker.py  info_gain.py  matching_schedule.py  metrics.py  prompts.py  protocol.py  runner.py  schedule.py  session.py  types.py
gshp/graph/: __init__.py  caveman.py
gshp/llm/: __init__.py  logging_client.py  openai_local.py  stub_client.py
gshp/task/: __init__.py  generator.py  hiring.py
scripts/: paper_tables.py  post_run_analysis.sh
tests/: test_aho_corasick.py  test_info_gain.py  test_matching_schedule.py  test_schedule_invariants.py  test_task_quality.py
