[project]
name = "graph-scheduled-hidden-profile"
version = "0.1.0"
description = "Hidden-profile tasks on caveman graphs with scheduled pairwise communication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "pydantic>=2.6",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",  # OpenAI-compatible API (vLLM, etc.)
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gshp"]
